# cpp-sandbox

./: .gitignore  CMakeLists.txt  README.md  create.sh  install.sh
buildscripts/linux/: m_run.sh
buildscripts/mac/: m_create.sh  m_fullbuild.sh  m_make.sh  m_run.sh
buildscripts/windows/: m_create.sh  m_run.sh
inputs/: test01.txt
src/: CMakeLists.txt  Project.cmake  file.h  helpers.h  main.cc  main.h
